y.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declaration_specifiers declarator declaration_list compound_statement
    6                    | declaration_specifiers declarator compound_statement

    7 declaration_list: declaration
    8                 | declaration_list declaration

    9 declaration: declaration_specifiers init_declarator_list ';'
   10            | declaration_specifiers ';'

   11 declaration_specifiers: storage_class_specifier declaration_specifiers
   12                       | storage_class_specifier
   13                       | type_specifier declaration_specifiers
   14                       | type_specifier
   15                       | type_qualifier declaration_specifiers
   16                       | type_qualifier
   17                       | function_specifier declaration_specifiers
   18                       | function_specifier

   19 init_declarator_list: init_declarator
   20                     | init_declarator_list ',' init_declarator

   21 init_declarator: declarator
   22                | declarator '=' initializer

   23 storage_class_specifier: EXTERN
   24                        | STATIC
   25                        | AUTO
   26                        | REGISTER

   27 type_specifier: VOID
   28               | CHAR
   29               | SHORT
   30               | INT
   31               | LONG
   32               | FLOAT
   33               | DOUBLE
   34               | SIGNED
   35               | UNSIGNED
   36               | BOOL
   37               | COMPLEX
   38               | IMAGINARY
   39               | enum_specifier

   40 specifier_qualifier_list: type_specifier specifier_qualifier_list
   41                         | type_specifier
   42                         | type_qualifier specifier_qualifier_list
   43                         | type_qualifier

   44 enum_specifier: ENUM IDENTIFIER '{' enumerator_list '}'
   45               | ENUM '{' enumerator_list '}'
   46               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
   47               | ENUM '{' enumerator_list ',' '}'
   48               | ENUM IDENTIFIER

   49 enumerator_list: enumerator
   50                | enumerator_list ',' enumerator

   51 enumerator: enumeration_constant
   52           | enumeration_constant '=' constant_expression

   53 enumeration_constant: IDENTIFIER

   54 type_qualifier: CONST
   55               | RESTRICT
   56               | VOLATILE

   57 function_specifier: INLINE

   58 declarator: pointer direct_declarator
   59           | direct_declarator

   60 direct_declarator: IDENTIFIER
   61                  | '(' declarator ')'
   62                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
   63                  | direct_declarator '[' type_qualifier_list ']'
   64                  | direct_declarator '[' assignment_expression ']'
   65                  | direct_declarator '[' ']'
   66                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
   67                  | direct_declarator '[' STATIC assignment_expression ']'
   68                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
   69                  | direct_declarator '[' type_qualifier_list '*' ']'
   70                  | direct_declarator '[' '*' ']'
   71                  | direct_declarator push_sym '(' parameter_type_list ')'
   72                  | direct_declarator push_sym '(' identifier_list ')'
   73                  | direct_declarator push_sym '(' ')'

   74 push_sym: ε

   75 pointer: '*' type_qualifier_list
   76        | '*'
   77        | '*' type_qualifier_list pointer
   78        | '*' pointer

   79 type_qualifier_list: type_qualifier
   80                    | type_qualifier_list type_qualifier

   81 parameter_type_list: parameter_list
   82                    | parameter_list ',' ELIP

   83 parameter_list: parameter_declaration
   84               | parameter_list ',' parameter_declaration

   85 parameter_declaration: declaration_specifiers declarator
   86                      | declaration_specifiers

   87 identifier_list: IDENTIFIER
   88                | identifier_list ',' IDENTIFIER

   89 type_name: specifier_qualifier_list

   90 initializer: assignment_expression
   91            | '{' initializer_list '}'
   92            | '{' initializer_list ',' '}'

   93 initializer_list: designation initializer
   94                 | initializer
   95                 | initializer_list ',' designation initializer
   96                 | initializer_list ',' initializer

   97 designation: designator_list '='

   98 designator_list: designator
   99                | designator_list designator

  100 designator: '[' constant_expression ']'
  101           | '.' IDENTIFIER

  102 statement: labeled_statement
  103          | compound_statement
  104          | expression_statement
  105          | selection_statement
  106          | iteration_statement
  107          | jump_statement

  108 labeled_statement: IDENTIFIER ':' statement
  109                  | CASE constant_expression ':' statement
  110                  | DEFAULT ':' statement

  111 compound_statement: '{' block_item_list '}'
  112                   | '{' '}'

  113 block_item_list: block_item
  114                | block_item_list address_nonterm block_item

  115 block_item: declaration
  116           | statement

  117 expression_statement: expression ';'
  118                     | ';'

  119 selection_statement: IF '(' bool_expression ')' address_nonterm statement jump_nonterm ELSE address_nonterm statement
  120                    | IF '(' bool_expression ')' address_nonterm statement jump_nonterm
  121                    | SWITCH '(' expression ')' statement

  122 iteration_statement: WHILE '(' address_nonterm bool_expression ')' address_nonterm statement jump_nonterm
  123                    | DO address_nonterm statement address_nonterm WHILE '(' bool_expression ')' ';'
  124                    | FOR '(' temp ';' address_nonterm bool_temp ';' address_nonterm temp jump_nonterm ')' address_nonterm statement jump_nonterm
  125                    | FOR '(' declaration ';' temp ';' temp ')' statement

  126 temp: expression
  127     | ε

  128 bool_temp: bool_expression
  129          | ε

  130 bool_expression: expression

  131 jump_statement: GOTO IDENTIFIER ';'
  132               | CONTINUE ';'
  133               | BREAK ';'
  134               | RETURN temp ';'

  135 primary_expression: IDENTIFIER
  136                   | CONSTANT
  137                   | STRING_LITERAL
  138                   | '(' expression ')'

  139 postfix_expression: primary_expression
  140                   | postfix_expression '[' expression ']'
  141                   | postfix_expression '(' argument_expression_list ')'
  142                   | postfix_expression '(' ')'
  143                   | postfix_expression '.' IDENTIFIER
  144                   | postfix_expression ACC IDENTIFIER
  145                   | postfix_expression INC
  146                   | postfix_expression DEC
  147                   | '(' type_name ')' '{' initializer_list '}'
  148                   | '(' type_name ')' '{' initializer_list ',' '}'

  149 argument_expression_list: assignment_expression
  150                         | argument_expression_list ',' assignment_expression

  151 unary_expression: postfix_expression
  152                 | INC unary_expression
  153                 | DEC unary_expression
  154                 | '&' unary_expression
  155                 | '*' cast_expression
  156                 | '+' cast_expression
  157                 | '-' cast_expression
  158                 | '~' cast_expression
  159                 | '!' cast_expression
  160                 | SIZEOF unary_expression
  161                 | SIZEOF '(' type_name ')'

  162 cast_expression: unary_expression
  163                | '(' type_name ')' cast_expression

  164 nb_cast_expression: cast_expression

  165 multiplicative_expression: cast_expression
  166                          | nb_multiplicative_expression '*' nb_cast_expression
  167                          | nb_multiplicative_expression '/' nb_cast_expression
  168                          | nb_multiplicative_expression '%' nb_cast_expression

  169 nb_multiplicative_expression: multiplicative_expression

  170 additive_expression: multiplicative_expression
  171                    | nb_additive_expression '+' nb_multiplicative_expression
  172                    | nb_additive_expression '-' nb_multiplicative_expression

  173 nb_additive_expression: additive_expression

  174 shift_expression: additive_expression
  175                 | nb_shift_expression SHL nb_additive_expression
  176                 | nb_shift_expression SHR nb_additive_expression

  177 nb_shift_expression: shift_expression

  178 relational_expression: shift_expression
  179                      | nb_relational_expression '<' nb_shift_expression
  180                      | nb_relational_expression '>' nb_shift_expression
  181                      | nb_relational_expression LTE nb_shift_expression
  182                      | nb_relational_expression GTE nb_shift_expression

  183 nb_relational_expression: relational_expression

  184 equality_expression: relational_expression
  185                    | nb_equality_expression EQUAL nb_relational_expression
  186                    | nb_equality_expression NEQUAL nb_relational_expression

  187 nb_equality_expression: equality_expression

  188 and_expression: equality_expression
  189               | nb_and_expression '&' nb_equality_expression

  190 nb_and_expression: and_expression

  191 exclusive_or_expression: and_expression
  192                        | nb_exclusive_or_expression '^' nb_and_expression

  193 nb_exclusive_or_expression: exclusive_or_expression

  194 inclusive_or_expression: exclusive_or_expression
  195                        | nb_inclusive_or_expression '|' nb_exclusive_or_expression

  196 nb_inclusive_or_expression: inclusive_or_expression

  197 logical_and_expression: inclusive_or_expression
  198                       | bool_logical_and_expression LogAND address_nonterm bool_inclusive_or_expression

  199 logical_or_expression: logical_and_expression
  200                      | bool_logical_or_expression LogOR address_nonterm bool_logical_and_expression

  201 bool_inclusive_or_expression: inclusive_or_expression

  202 bool_logical_or_expression: logical_or_expression

  203 bool_logical_and_expression: logical_and_expression

  204 conditional_expression: logical_or_expression
  205                       | bool_logical_or_expression '?' address_nonterm expression jump_nonterm ':' address_nonterm conditional_expression jump_nonterm

  206 assignment_expression: conditional_expression
  207                      | unary_expression assignment_operator assignment_expression

  208 assignment_operator: '='
  209                    | AssSTAR
  210                    | AssDIV
  211                    | AssMOD
  212                    | AssPLUS
  213                    | AssMINUS
  214                    | AssSHL
  215                    | AssSHR
  216                    | AssBinAND
  217                    | AssXOR
  218                    | AssBinOR

  219 expression: assignment_expression
  220           | expression ',' assignment_expression

  221 constant_expression: conditional_expression

  222 address_nonterm: ε

  223 jump_nonterm: ε


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 159
    '%' (37) 168
    '&' (38) 154 189
    '(' (40) 61 71 72 73 119 120 121 122 123 124 125 138 141 142 147 148 161 163
    ')' (41) 61 71 72 73 119 120 121 122 123 124 125 138 141 142 147 148 161 163
    '*' (42) 69 70 75 76 77 78 155 166
    '+' (43) 156 171
    ',' (44) 20 46 47 50 82 84 88 92 95 96 148 150 220
    '-' (45) 157 172
    '.' (46) 101 143
    '/' (47) 167
    ':' (58) 108 109 110 205
    ';' (59) 9 10 117 118 123 124 125 131 132 133 134
    '<' (60) 179
    '=' (61) 22 52 97 208
    '>' (62) 180
    '?' (63) 205
    '[' (91) 62 63 64 65 66 67 68 69 70 100 140
    ']' (93) 62 63 64 65 66 67 68 69 70 100 140
    '^' (94) 192
    '{' (123) 44 45 46 47 91 92 111 112 147 148
    '|' (124) 195
    '}' (125) 44 45 46 47 91 92 111 112 147 148
    '~' (126) 158
    error (256)
    AUTO <null> (258) 25
    BREAK <null> (259) 133
    CASE <null> (260) 109
    CHAR <null> (261) 28
    CONST <null> (262) 54
    CONTINUE <null> (263) 132
    DEFAULT <null> (264) 110
    DO <null> (265) 123
    DOUBLE <null> (266) 33
    ELSE <null> (267) 119
    ENUM <null> (268) 44 45 46 47 48
    EXTERN <null> (269) 23
    FLOAT <null> (270) 32
    FOR <null> (271) 124 125
    GOTO <null> (272) 131
    IF <null> (273) 119 120
    INLINE <null> (274) 57
    INT <null> (275) 30
    LONG <null> (276) 31
    REGISTER <null> (277) 26
    RESTRICT <null> (278) 55
    RETURN <null> (279) 134
    SHORT <null> (280) 29
    SIGNED <null> (281) 34
    SIZEOF <null> (282) 160 161
    STATIC <null> (283) 24 66 67 68
    STRUCT <null> (284)
    SWITCH <null> (285) 121
    TYPEDEF <null> (286)
    UNION <null> (287)
    UNSIGNED <null> (288) 35
    VOID <null> (289) 27
    VOLATILE <null> (290) 56
    WHILE <null> (291) 122 123
    BOOL <null> (292) 36
    COMPLEX <null> (293) 37
    IMAGINARY <null> (294) 38
    ACC <null> (295) 144
    INC <null> (296) 145 152
    DEC <null> (297) 146 153
    SHL <null> (298) 175
    SHR <null> (299) 176
    LTE <null> (300) 181
    GTE <null> (301) 182
    EQUAL <null> (302) 185
    NEQUAL <null> (303) 186
    LogAND <null> (304) 198
    LogOR <null> (305) 200
    ELIP <null> (306) 82
    AssSTAR <null> (307) 209
    AssDIV <null> (308) 210
    AssMOD <null> (309) 211
    AssPLUS <null> (310) 212
    AssMINUS <null> (311) 213
    AssSHL <null> (312) 214
    AssSHR <null> (313) 215
    AssBinAND <null> (314) 216
    AssXOR <null> (315) 217
    AssBinOR <null> (316) 218
    IDENTIFIER <sym> (317) 44 46 48 53 60 87 88 101 108 131 135 143 144
    CONSTANT <sym> (318) 136
    STRING_LITERAL <str> (319) 137
    IFX (320)


Nonterminals, with rules where they appear

    $accept (90)
        on left: 0
    translation_unit <sym> (91)
        on left: 1 2
        on right: 0 2
    external_declaration <sym> (92)
        on left: 3 4
        on right: 1 2
    function_definition <sym> (93)
        on left: 5 6
        on right: 3
    declaration_list <sym> (94)
        on left: 7 8
        on right: 5 8
    declaration <sym> (95)
        on left: 9 10
        on right: 4 7 8 115 125
    declaration_specifiers <sym> (96)
        on left: 11 12 13 14 15 16 17 18
        on right: 5 6 9 10 11 13 15 17 85 86
    init_declarator_list <sym> (97)
        on left: 19 20
        on right: 9 20
    init_declarator <sym> (98)
        on left: 21 22
        on right: 19 20
    storage_class_specifier <sym> (99)
        on left: 23 24 25 26
        on right: 11 12
    type_specifier <sym> (100)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38 39
        on right: 13 14 40 41
    specifier_qualifier_list <sym> (101)
        on left: 40 41 42 43
        on right: 40 42 89
    enum_specifier <sym> (102)
        on left: 44 45 46 47 48
        on right: 39
    enumerator_list <sym> (103)
        on left: 49 50
        on right: 44 45 46 47 50
    enumerator <sym> (104)
        on left: 51 52
        on right: 49 50
    enumeration_constant <sym> (105)
        on left: 53
        on right: 51 52
    type_qualifier <sym> (106)
        on left: 54 55 56
        on right: 15 16 42 43 79 80
    function_specifier <sym> (107)
        on left: 57
        on right: 17 18
    declarator <sym> (108)
        on left: 58 59
        on right: 5 6 21 22 61 85
    direct_declarator <sym> (109)
        on left: 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 58 59 62 63 64 65 66 67 68 69 70 71 72 73
    push_sym <sym> (110)
        on left: 74
        on right: 71 72 73
    pointer <sym> (111)
        on left: 75 76 77 78
        on right: 58 77 78
    type_qualifier_list <sym> (112)
        on left: 79 80
        on right: 62 63 66 68 69 75 77 80
    parameter_type_list <sym> (113)
        on left: 81 82
        on right: 71
    parameter_list <sym> (114)
        on left: 83 84
        on right: 81 82 84
    parameter_declaration <sym> (115)
        on left: 85 86
        on right: 83 84
    identifier_list <sym> (116)
        on left: 87 88
        on right: 72 88
    type_name <sym> (117)
        on left: 89
        on right: 147 148 161 163
    initializer <sym> (118)
        on left: 90 91 92
        on right: 22 93 94 95 96
    initializer_list <sym> (119)
        on left: 93 94 95 96
        on right: 91 92 95 96 147 148
    designation <sym> (120)
        on left: 97
        on right: 93 95
    designator_list <sym> (121)
        on left: 98 99
        on right: 97 99
    designator <sym> (122)
        on left: 100 101
        on right: 98 99
    statement <nl> (123)
        on left: 102 103 104 105 106 107
        on right: 108 109 110 116 119 120 121 122 123 124 125
    labeled_statement <nl> (124)
        on left: 108 109 110
        on right: 102
    compound_statement <nl> (125)
        on left: 111 112
        on right: 5 6 103
    block_item_list <nl> (126)
        on left: 113 114
        on right: 111 114
    block_item <nl> (127)
        on left: 115 116
        on right: 113 114
    expression_statement <nl> (128)
        on left: 117 118
        on right: 104
    selection_statement <nl> (129)
        on left: 119 120 121
        on right: 105
    iteration_statement <nl> (130)
        on left: 122 123 124 125
        on right: 106
    temp <sym> (131)
        on left: 126 127
        on right: 124 125 134
    bool_temp <sym> (132)
        on left: 128 129
        on right: 124
    bool_expression <sym> (133)
        on left: 130
        on right: 119 120 122 123 128
    jump_statement <nl> (134)
        on left: 131 132 133 134
        on right: 107
    primary_expression <sym> (135)
        on left: 135 136 137 138
        on right: 139
    postfix_expression <sym> (136)
        on left: 139 140 141 142 143 144 145 146 147 148
        on right: 140 141 142 143 144 145 146 151
    argument_expression_list <al> (137)
        on left: 149 150
        on right: 141 150
    unary_expression <sym> (138)
        on left: 151 152 153 154 155 156 157 158 159 160 161
        on right: 152 153 154 160 162 207
    cast_expression <sym> (139)
        on left: 162 163
        on right: 155 156 157 158 159 163 164 165
    nb_cast_expression <sym> (140)
        on left: 164
        on right: 166 167 168
    multiplicative_expression <sym> (141)
        on left: 165 166 167 168
        on right: 169 170
    nb_multiplicative_expression <sym> (142)
        on left: 169
        on right: 166 167 168 171 172
    additive_expression <sym> (143)
        on left: 170 171 172
        on right: 173 174
    nb_additive_expression <sym> (144)
        on left: 173
        on right: 171 172 175 176
    shift_expression <sym> (145)
        on left: 174 175 176
        on right: 177 178
    nb_shift_expression <sym> (146)
        on left: 177
        on right: 175 176 179 180 181 182
    relational_expression <sym> (147)
        on left: 178 179 180 181 182
        on right: 183 184
    nb_relational_expression <sym> (148)
        on left: 183
        on right: 179 180 181 182 185 186
    equality_expression <sym> (149)
        on left: 184 185 186
        on right: 187 188
    nb_equality_expression <sym> (150)
        on left: 187
        on right: 185 186 189
    and_expression <sym> (151)
        on left: 188 189
        on right: 190 191
    nb_and_expression <sym> (152)
        on left: 190
        on right: 189 192
    exclusive_or_expression <sym> (153)
        on left: 191 192
        on right: 193 194
    nb_exclusive_or_expression <sym> (154)
        on left: 193
        on right: 192 195
    inclusive_or_expression <sym> (155)
        on left: 194 195
        on right: 196 197 201
    nb_inclusive_or_expression <sym> (156)
        on left: 196
        on right: 195
    logical_and_expression <sym> (157)
        on left: 197 198
        on right: 199 203
    logical_or_expression <sym> (158)
        on left: 199 200
        on right: 202 204
    bool_inclusive_or_expression <sym> (159)
        on left: 201
        on right: 198
    bool_logical_or_expression <sym> (160)
        on left: 202
        on right: 200 205
    bool_logical_and_expression <sym> (161)
        on left: 203
        on right: 198 200
    conditional_expression <sym> (162)
        on left: 204 205
        on right: 205 206 221
    assignment_expression <sym> (163)
        on left: 206 207
        on right: 62 64 66 67 68 90 149 150 207 219 220
    assignment_operator <sym> (164)
        on left: 208 209 210 211 212 213 214 215 216 217 218
        on right: 207
    expression <sym> (165)
        on left: 219 220
        on right: 117 121 126 130 138 140 205 220
    constant_expression <sym> (166)
        on left: 221
        on right: 52 100 109
    address_nonterm <add> (167)
        on left: 222
        on right: 114 119 120 122 123 124 198 200 205
    jump_nonterm <nl> (168)
        on left: 223
        on right: 119 120 122 124 205


State 0

    0 $accept: • translation_unit $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    translation_unit         go to state 22
    external_declaration     go to state 23
    function_definition      go to state 24
    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 1

   25 storage_class_specifier: AUTO •

    $default  reduce using rule 25 (storage_class_specifier)


State 2

   28 type_specifier: CHAR •

    $default  reduce using rule 28 (type_specifier)


State 3

   54 type_qualifier: CONST •

    $default  reduce using rule 54 (type_qualifier)


State 4

   33 type_specifier: DOUBLE •

    $default  reduce using rule 33 (type_specifier)


State 5

   44 enum_specifier: ENUM • IDENTIFIER '{' enumerator_list '}'
   45               | ENUM • '{' enumerator_list '}'
   46               | ENUM • IDENTIFIER '{' enumerator_list ',' '}'
   47               | ENUM • '{' enumerator_list ',' '}'
   48               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 32
    '{'         shift, and go to state 33


State 6

   23 storage_class_specifier: EXTERN •

    $default  reduce using rule 23 (storage_class_specifier)


State 7

   32 type_specifier: FLOAT •

    $default  reduce using rule 32 (type_specifier)


State 8

   57 function_specifier: INLINE •

    $default  reduce using rule 57 (function_specifier)


State 9

   30 type_specifier: INT •

    $default  reduce using rule 30 (type_specifier)


State 10

   31 type_specifier: LONG •

    $default  reduce using rule 31 (type_specifier)


State 11

   26 storage_class_specifier: REGISTER •

    $default  reduce using rule 26 (storage_class_specifier)


State 12

   55 type_qualifier: RESTRICT •

    $default  reduce using rule 55 (type_qualifier)


State 13

   29 type_specifier: SHORT •

    $default  reduce using rule 29 (type_specifier)


State 14

   34 type_specifier: SIGNED •

    $default  reduce using rule 34 (type_specifier)


State 15

   24 storage_class_specifier: STATIC •

    $default  reduce using rule 24 (storage_class_specifier)


State 16

   35 type_specifier: UNSIGNED •

    $default  reduce using rule 35 (type_specifier)


State 17

   27 type_specifier: VOID •

    $default  reduce using rule 27 (type_specifier)


State 18

   56 type_qualifier: VOLATILE •

    $default  reduce using rule 56 (type_qualifier)


State 19

   36 type_specifier: BOOL •

    $default  reduce using rule 36 (type_specifier)


State 20

   37 type_specifier: COMPLEX •

    $default  reduce using rule 37 (type_specifier)


State 21

   38 type_specifier: IMAGINARY •

    $default  reduce using rule 38 (type_specifier)


State 22

    0 $accept: translation_unit • $end
    2 translation_unit: translation_unit • external_declaration

    $end       shift, and go to state 34
    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    external_declaration     go to state 35
    function_definition      go to state 24
    declaration              go to state 25
    declaration_specifiers   go to state 26
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 23

    1 translation_unit: external_declaration •

    $default  reduce using rule 1 (translation_unit)


State 24

    3 external_declaration: function_definition •

    $default  reduce using rule 3 (external_declaration)


State 25

    4 external_declaration: declaration •

    $default  reduce using rule 4 (external_declaration)


State 26

    5 function_definition: declaration_specifiers • declarator declaration_list compound_statement
    6                    | declaration_specifiers • declarator compound_statement
    9 declaration: declaration_specifiers • init_declarator_list ';'
   10            | declaration_specifiers • ';'

    IDENTIFIER  shift, and go to state 36
    ';'         shift, and go to state 37
    '('         shift, and go to state 38
    '*'         shift, and go to state 39

    init_declarator_list  go to state 40
    init_declarator       go to state 41
    declarator            go to state 42
    direct_declarator     go to state 43
    pointer               go to state 44


State 27

   11 declaration_specifiers: storage_class_specifier • declaration_specifiers
   12                       | storage_class_specifier •

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 12 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 28

   13 declaration_specifiers: type_specifier • declaration_specifiers
   14                       | type_specifier •

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 14 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 29

   39 type_specifier: enum_specifier •

    $default  reduce using rule 39 (type_specifier)


State 30

   15 declaration_specifiers: type_qualifier • declaration_specifiers
   16                       | type_qualifier •

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 16 (declaration_specifiers)

    declaration_specifiers   go to state 47
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 31

   17 declaration_specifiers: function_specifier • declaration_specifiers
   18                       | function_specifier •

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 18 (declaration_specifiers)

    declaration_specifiers   go to state 48
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31


State 32

   44 enum_specifier: ENUM IDENTIFIER • '{' enumerator_list '}'
   46               | ENUM IDENTIFIER • '{' enumerator_list ',' '}'
   48               | ENUM IDENTIFIER •

    '{'  shift, and go to state 49

    $default  reduce using rule 48 (enum_specifier)


State 33

   45 enum_specifier: ENUM '{' • enumerator_list '}'
   47               | ENUM '{' • enumerator_list ',' '}'

    IDENTIFIER  shift, and go to state 50

    enumerator_list       go to state 51
    enumerator            go to state 52
    enumeration_constant  go to state 53


State 34

    0 $accept: translation_unit $end •

    $default  accept


State 35

    2 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 2 (translation_unit)


State 36

   60 direct_declarator: IDENTIFIER •

    $default  reduce using rule 60 (direct_declarator)


State 37

   10 declaration: declaration_specifiers ';' •

    $default  reduce using rule 10 (declaration)


State 38

   61 direct_declarator: '(' • declarator ')'

    IDENTIFIER  shift, and go to state 36
    '('         shift, and go to state 38
    '*'         shift, and go to state 39

    declarator         go to state 54
    direct_declarator  go to state 43
    pointer            go to state 44


State 39

   75 pointer: '*' • type_qualifier_list
   76        | '*' •
   77        | '*' • type_qualifier_list pointer
   78        | '*' • pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18
    '*'       shift, and go to state 39

    $default  reduce using rule 76 (pointer)

    type_qualifier       go to state 55
    pointer              go to state 56
    type_qualifier_list  go to state 57


State 40

    9 declaration: declaration_specifiers init_declarator_list • ';'
   20 init_declarator_list: init_declarator_list • ',' init_declarator

    ';'  shift, and go to state 58
    ','  shift, and go to state 59


State 41

   19 init_declarator_list: init_declarator •

    $default  reduce using rule 19 (init_declarator_list)


State 42

    5 function_definition: declaration_specifiers declarator • declaration_list compound_statement
    6                    | declaration_specifiers declarator • compound_statement
   21 init_declarator: declarator •
   22                | declarator • '=' initializer

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21
    '='        shift, and go to state 60
    '{'        shift, and go to state 61

    $default  reduce using rule 21 (init_declarator)

    declaration_list         go to state 62
    declaration              go to state 63
    declaration_specifiers   go to state 64
    storage_class_specifier  go to state 27
    type_specifier           go to state 28
    enum_specifier           go to state 29
    type_qualifier           go to state 30
    function_specifier       go to state 31
    compound_statement       go to state 65


State 43
